<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_margin="15dp"
    android:id="@+id/parent_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="150dp"
        android:id="@+id/thumbnail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="7dp"
        android:layout_margin="15dp"
        android:layout_height="150dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/title"
        android:textSize="15sp"
        android:layout_marginStart="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="7dp"
        app:layout_constraintTop_toBottomOf="@id/thumbnail"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>