<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MoviesListFragment">

    <com.airbnb.epoxy.EpoxyRecyclerView
        android:layout_width="match_parent"
        android:id="@+id/recycler_view"
        android:layout_height="match_parent"/>

</FrameLayout>