<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CastDetailfragment">

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/cast_text_view"
        android:layout_margin="25dp"
        android:lineHeight="16sp"
        android:lineSpacingExtra="20sp"
        android:layout_height="wrap_content"/>

</FrameLayout>