...
            android:textSize="15sp"
            android:id="@+id/description"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cast_card_view"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
...
